[gd_scene load_steps=3 format=3 uid="uid://4j6i3pk75o7d"]

[ext_resource type="Script" path="res://scripts/esi_test.gd" id="1_yjk2q"]

[sub_resource type="LabelSettings" id="LabelSettings_i3w0g"]

[node name="ESI-TEST" type="CanvasLayer"]
script = ExtResource("1_yjk2q")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.636426, 0.833237, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DataLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Data will be displayed here"
label_settings = SubResource("LabelSettings_i3w0g")
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load Data"

[node name="AddSetButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add Set"

[node name="ClearDataButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear Data"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Back-Day" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "<"

[node name="Fw-Day" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = ">"

[node name="CalendarContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="CalendarVBoxContainer" type="VBoxContainer" parent="VBoxContainer/CalendarContainer"]
layout_mode = 2

[node name="CalendarHBoxContainer" type="HBoxContainer" parent="VBoxContainer/CalendarContainer/CalendarVBoxContainer"]
layout_mode = 2

[node name="MonthYear" type="Label" parent="VBoxContainer/CalendarContainer/CalendarVBoxContainer/CalendarHBoxContainer"]
layout_mode = 2
text = "Month / Year Label"

[node name="CalendarGrid" type="GridContainer" parent="VBoxContainer/CalendarContainer/CalendarVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 7
